--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,8 @@ github_username:  the-engine-room
 
 # Build settings
 markdown: kramdown
+kramdown: 
+  parse_block_html: true
 
 exclude:
   - .gitignore
