Configured and created Handbook chapters per the-engine-room/responsible-data-handbook#5

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ github_username:  the-engine-room
 markdown: kramdown
 kramdown: 
   parse_block_html: true
-
+permalink: /:categories/:title.html
 exclude:
   - .gitignore
   - README.md
