--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,8 @@ email: contact@responsibledata.io
 description: A primer on why Responsible Data is a relevant concern for international development work. 
 
 
-baseurl: "/responsible-data-handbook" # the subpath of your site, e.g. /blog
-url: "http://the-engine-room.github.io" # the base hostname & protocol for your site
-
+baseurl: "https://responsibledata.io/resources/handbook" # the subpath of your site, e.g. /blog
+#url: "https://responsibledata.io/" # the base hostname & protocol for your site	
 twitter_username: engnroom
 github_username:  the-engine-room
 
